Fix background image to be behind the content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,12 +5,21 @@
 /* All Tasks Page */
 
 /* Background Image */
+body {
+    background-image: url("../images/justus_menke_unsplash.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-color: white;
+}
 
 
-
-/* Provide space between the small buttons */
+/* Provide space between buttons */
 .btn-small {
     margin: 3px;
+}
+
+.btn {
+    margin: 5px;
 }
 
 .collapsible-header .col strong {
@@ -89,4 +98,5 @@ nav .brand-logo {
     bottom: 0;
     position: fixed;
     width: 100%;
+    padding-top: 0px;
 }
